# tradingcore2

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.builddockerhub  Dockerfile.builder  Dockerfile.dev  Dockerfile.dockerhub  Dockerfile.gtest  README.md  VERSION  build2dockerhub.sh  buildbuilderdocker.sh  builddevdocker.sh  builddocker.sh  buildgflags.sh  buildglog.sh  buildgoogletest.sh  buildgrpc.sh  buildgsl.sh  buildgtestdocker.sh  buildinbuilder.sh  buildproto.sh  buildprotos.sh  buildrocksdb.sh  buildtalib.sh  buildyamlcpp.sh  buildzlib.sh  cleardeps.sh  cleargflags.sh  cleartalib.sh  fixgrpc.sh  inbuilder.sh  initdeps.mac.sh  initdeps.sh  initindebian.sh  initprotos.sh  startdockerserv.sh  updproto.sh  (+1 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: dockerimage.yml
cfg/: config.yaml.default
data/: 110022.csv
include/tradingcore2/: allctrlcondition.h  allexchanges.h  allindicators.h  allstrategy.h  assets.h  autorun.h  basedef.h  candle.h  config.h  csv.h  ctrlcondition.h  ctrlconditionmgr.h  exchange.h  exchangemgr.h  fund.h  indicator.h  indicatormap.h  indicatormgr.h  kvstorage.h  logs.h  pnl.h  pnl2.h  server.h  spinlock.h  strategy.h  strategymgr.h  talib.h  tasksmgr.h  trade.h  tradingcore2.h  train.h  utils.h  version.h.in  wallet.h
include/tradingcore2/client/: train2.h  train2p.h
include/tradingcore2/ctrlcondition/: annualizedreturns.h  annualizedreturnsex.h  buyandhold.h  ctrlconditionid.h  indicator.h  indicatordp.h  indicatordv.h  indicatorsp.h  indicatorsp2.h  indicatorsv.h  indicatorsvarea.h  indicatorsvaread.h  month.h  monthday.h  monthdayex.h  timestamp.h  timestampex.h  totalreturn.h  totalreturnex.h  waittostart.h  weekday.h  weekday2.h  weekdayex.h
include/tradingcore2/exchange/: bitmex.h  cnfund.h  jqdata.h  jrj.h  trdb2.h  trdb2cnfunds.h
include/tradingcore2/indicator/: ema.h  roc.h  rsi.h  sma.h  smma.h  ta_ma.h  ta_roc.h  ta_rsi.h  wma.h
include/tradingcore2/proto/: tradingcore2.pb.cc  tradingcore2.pb.h  tradingdb2.grpc.pb.cc  tradingdb2.grpc.pb.h  tradingdb2.pb.cc  tradingdb2.pb.h
include/tradingcore2/protos/: trading2.pb.cc  trading2.pb.h  tradingdb2.grpc.pb.cc  tradingdb2.grpc.pb.h  tradingdb2.pb.cc  tradingdb2.pb.h  tradingnode2.grpc.pb.cc  tradingnode2.grpc.pb.h  tradingnode2.pb.cc  tradingnode2.pb.h
include/tradingcore2/server/: train.h  train2.h
include/tradingcore2/strategy/: aip.h  buyandhold.h  normal.h  singleindicator.h  singleindicator2.h
include/tradingcore2/trdb2/: client.h  datamgr.h  utils.h  workermgr.h
include/tradingcore2/trnode2/: client.h  serv.h  utils.h
proto/: tradingcore2.proto  tradingdb2.proto
protos/: trading2.proto  tradingcore2.proto  tradingdb2.proto  tradingnode2.proto
src/: main.cpp
src/calcfund/: CMakeLists.txt  main.cpp
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  main.cpp
src/tradingcore2/: CMakeLists.txt  allctrlcondition.cpp  allexchanges.cpp  allindicators.cpp  allstrategy.cpp  assets.cpp  candle.cpp  config.cpp  csv.cpp  ctrlcondition.cpp  ctrlconditionmgr.cpp  exchangemgr.cpp  fund.cpp  indicator.cpp  indicatormap.cpp  indicatormgr.cpp  kvstorage.cpp  logs.cpp  pnl.cpp  pnl2.cpp  strategy.cpp  strategymgr.cpp  talib.cpp  tasksmgr.cpp  train.cpp  utils.cpp  wallet.cpp  yamlutils.h
src/tradingcore2/client/: train2.cpp  train2p.cpp  utils.cpp  utils.h
src/tradingcore2/ctrlcondition/: annualizedreturns.cpp  annualizedreturnsex.cpp  buyandhold.cpp  ctrlconditionid.cpp  indicator.cpp  indicatordp.cpp  indicatordv.cpp  indicatorsp.cpp  indicatorsp2.cpp  indicatorsv.cpp  indicatorsvarea.cpp  indicatorsvaread.cpp  month.cpp  monthday.cpp  monthdayex.cpp  timestamp.cpp  timestampex.cpp  totalreturn.cpp  totalreturnex.cpp  waittostart.cpp  weekday.cpp  weekday2.cpp  weekdayex.cpp
src/tradingcore2/exchange/: bitmex.cpp  cnfund.cpp  jqdata.cpp  jrj.cpp  trdb2.cpp  trdb2cnfunds.cpp
src/tradingcore2/indicator/: ema.cpp  roc.cpp  rsi.cpp  sma.cpp  smma.cpp  ta_ma.cpp  ta_roc.cpp  ta_rsi.cpp  wma.cpp
src/tradingcore2/proto/: tradingcore2.grpc.pb.cc  tradingcore2.grpc.pb.h  tradingcore2.pb.cc  tradingcore2.pb.h  tradingdb2.grpc.pb.h  tradingdb2.pb.cc  tradingdb2.pb.h
src/tradingcore2/server/: train.cpp  train2.cpp  utils.cpp  utils.h
src/tradingcore2/strategy/: aip.cpp  buyandhold.cpp  normal.cpp  singleindicator.cpp  singleindicator2.cpp
src/tradingcore2/trdb2/: datamgr.cpp  trdb2.cpp  trdb2utils.cpp  utils.cpp  workermgr.cpp
src/tradingcore2/trnode2/: client.cpp  serv.cpp  utils.cpp
src/trdb2client/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  allindicators.cpp  config.cpp  csv.cpp  indicator.cpp  main.cpp  pnl.cpp  test.config.yaml  test3.config.yaml  utils.cpp  wallet.cpp
tests/exchange/: cnfund.cpp
tests/indicator/: ema.cpp  roc.cpp  rsi.cpp  sma.cpp  smma.cpp  ta_ma.cpp  ta_roc.cpp  ta_rsi.cpp  wma.cpp
