cmake_minimum_required(VERSION 3.0.0)

# enable_testing()

include_directories(../include)
include_directories(../deps/googletest/googletest/include)
include_directories(../deps/grpc/third_party/protobuf/src)
include_directories(../deps/grpc/include)
# include_directories(${CMAKE_BINARY_DIR}/deps/glog)

link_directories(../deps/googletest/build/lib)
link_directories(../deps/gsl/build)
link_directories(../deps/yaml-cpp/build)
link_directories(../deps/glog/cmakebuild)
link_directories(../deps/grpc/cmakebuild)
link_directories(../deps/grpc/cmakebuild/third_party/boringssl-with-bazel)
link_directories(../deps/grpc/cmakebuild/third_party/abseil-cpp/absl/strings)
link_directories(../deps/grpc/cmakebuild/third_party/abseil-cpp/absl/time)
link_directories(../deps/grpc/cmakebuild/third_party/abseil-cpp/absl/base)
link_directories(../deps/grpc/cmakebuild/third_party/abseil-cpp/absl/types)
link_directories(../deps/grpc/cmakebuild/third_party/abseil-cpp/absl/numeric)
link_directories(../deps/grpc/cmakebuild/third_party/protobuf)
link_directories(../deps/grpc/cmakebuild/third_party/cares/cares/lib)
link_directories(../deps/zlib/build)
link_directories(../deps/ta-lib/src/.libs)

aux_source_directory(. DIR_TESTS_SRCS)
aux_source_directory(./exchange DIR_TESTS_EXCHANGE_SRCS)
aux_source_directory(./indicator DIR_TESTS_INDICATOR_SRCS)

add_executable(tests ${DIR_TESTS_SRCS} 
                     ${DIR_TESTS_EXCHANGE_SRCS} 
                     ${DIR_TESTS_INDICATOR_SRCS})

target_link_libraries(tests libgtest.a)
target_link_libraries(tests libtradingcore2)
target_link_libraries(tests libgsl.a)
target_link_libraries(tests libta_lib.a)
if (UNIX AND NOT APPLE)
  target_link_libraries(tests grpc)
  target_link_libraries(tests grpc++)
  target_link_libraries(tests grpc++_reflection)
elseif (APPLE)
  target_link_libraries(tests libgrpc.a)
  target_link_libraries(tests libgrpc++.a)
  target_link_libraries(tests libgrpc++_reflection.a)
  target_link_libraries(tests libssl.a)
  target_link_libraries(tests libcrypto.a)
  target_link_libraries(tests libgpr.a)
  target_link_libraries(tests libabsl_time.a)
  target_link_libraries(tests libabsl_base.a)
  target_link_libraries(tests libabsl_raw_logging_internal.a)
  target_link_libraries(tests libabsl_throw_delegate.a)
  target_link_libraries(tests libabsl_time_zone.a)
  target_link_libraries(tests "-framework CoreFoundation")
  target_link_libraries(tests libabsl_strings.a)
  target_link_libraries(tests libabsl_str_format_internal.a)
  target_link_libraries(tests libabsl_bad_optional_access.a)
  target_link_libraries(tests libabsl_int128.a)
  target_link_libraries(tests libprotobuf.a)
  target_link_libraries(tests libaddress_sorting.a)
  target_link_libraries(tests libcares.a)
  target_link_libraries(tests libupb.a)
endif ()
target_link_libraries(tests libz.a)
target_link_libraries(tests libyaml-cpp.a)
target_link_libraries(tests libglog.a)
target_link_libraries(tests pthread)
target_link_libraries(tests libgflags.a)