cmake_minimum_required(VERSION 3.0.0)

include_directories(../../include)
# include_directories(${CMAKE_BINARY_DIR}/deps/glog)

link_directories(../../deps/gsl/build)
link_directories(../../deps/yaml-cpp/build)
link_directories(../../deps/glog/cmakebuild)
link_directories(../../deps/grpc/cmakebuild)
link_directories(../../deps/grpc/cmakebuild/third_party/boringssl-with-bazel)
link_directories(../../deps/grpc/cmakebuild/third_party/abseil-cpp/absl/strings)
link_directories(../../deps/grpc/cmakebuild/third_party/abseil-cpp/absl/time)
link_directories(../../deps/grpc/cmakebuild/third_party/abseil-cpp/absl/base)
link_directories(../../deps/grpc/cmakebuild/third_party/abseil-cpp/absl/types)
link_directories(../../deps/grpc/cmakebuild/third_party/abseil-cpp/absl/numeric)
link_directories(../../deps/grpc/cmakebuild/third_party/protobuf)
link_directories(../../deps/grpc/cmakebuild/third_party/cares/cares/lib)
link_directories(../../deps/zlib/build)
link_directories(../../deps/ta-lib/src/.libs)

aux_source_directory(. DIR_MAIN_SRCS)

add_executable(calcfund ${DIR_MAIN_SRCS})

target_link_libraries(calcfund libtradingcore2)
target_link_libraries(calcfund libgsl.a)
target_link_libraries(calcfund libta_lib.a)
target_link_libraries(calcfund libz.a)
if (UNIX AND NOT APPLE)
  target_link_libraries(calcfund grpc)
  target_link_libraries(calcfund grpc++)
  target_link_libraries(calcfund grpc++_reflection)
elseif (APPLE)
  target_link_libraries(calcfund libgrpc.a)
  target_link_libraries(calcfund libgrpc++.a)
  target_link_libraries(calcfund libgrpc++_reflection.a)
  target_link_libraries(calcfund libssl.a)
  target_link_libraries(calcfund libcrypto.a)
  target_link_libraries(calcfund libgpr.a)
  target_link_libraries(calcfund libabsl_time.a)
  target_link_libraries(calcfund libabsl_base.a)
  target_link_libraries(calcfund libabsl_raw_logging_internal.a)
  target_link_libraries(calcfund libabsl_throw_delegate.a)
  target_link_libraries(calcfund libabsl_time_zone.a)
  target_link_libraries(calcfund "-framework CoreFoundation")
  target_link_libraries(calcfund libabsl_strings.a)
  target_link_libraries(calcfund libabsl_str_format_internal.a)
  target_link_libraries(calcfund libabsl_bad_optional_access.a)
  target_link_libraries(calcfund libabsl_int128.a)
  target_link_libraries(calcfund libprotobuf.a)
  target_link_libraries(calcfund libaddress_sorting.a)
  target_link_libraries(calcfund libcares.a)
  target_link_libraries(calcfund libupb.a)
endif ()
target_link_libraries(calcfund librocksdb.a)
target_link_libraries(calcfund libyaml-cpp.a)
target_link_libraries(calcfund libglog.a)
target_link_libraries(calcfund libgflags.a)